<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_pattern"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_screen"
            android:elevation="4dp"
            android:gravity="end"
            android:paddingTop="32dp"
            android:text="9"
            android:textColor="@android:color/black"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <Button
            android:id="@+id/button26"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/div"
            app:layout_constraintBottom_toTopOf="@+id/button22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button25"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/negative"
            app:layout_constraintBottom_toTopOf="@+id/button21"
            app:layout_constraintEnd_toStartOf="@+id/button26"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button24"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/percent"
            app:layout_constraintBottom_toTopOf="@+id/button20"
            app:layout_constraintEnd_toStartOf="@+id/button25"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button22"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/mul"
            app:layout_constraintBottom_toTopOf="@+id/button18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button21"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button20"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toStartOf="@+id/button21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button24" />

        <Button
            android:id="@+id/button7"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button8"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button9"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/backscape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button10"
            style="@style/functionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button11"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button12"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/button13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button13"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button14"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button15"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@+id/button11"
            app:layout_constraintEnd_toStartOf="@+id/button16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button16"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button17"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@+id/button13"
            app:layout_constraintEnd_toStartOf="@+id/button18"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button21" />

        <Button
            android:id="@+id/button18"
            style="@style/operatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/sub"
            app:layout_constraintBottom_toTopOf="@+id/button14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button19"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@+id/button15"
            app:layout_constraintEnd_toStartOf="@+id/button20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button23" />

        <Button
            android:id="@+id/button21"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@+id/button17"
            app:layout_constraintEnd_toStartOf="@+id/button22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button25" />

        <Button
            android:id="@+id/button23"
            style="@style/functionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetLeft="4dp"
            android:insetTop="4dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:text="@string/ac"
            app:layout_constraintBottom_toTopOf="@+id/button19"
            app:layout_constraintEnd_toStartOf="@+id/button24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>