<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MaterialCalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:elevation="4dp">

        <TextView
            android:id="@+id/lblResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="end"
            android:maxLines="1"
            android:textSize="34sp"
            app:autoSizeMaxTextSize="34sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeStepGranularity="4sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblMain" />

        <TextView
            android:id="@+id/lblMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:ellipsize="none"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@null"
            android:importantForAutofill="no"
            android:maxLines="3"
            android:textAlignment="viewEnd"
            android:textColor="#000"
            android:textSize="56sp"
            app:autoSizeMaxTextSize="56sp"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeStepGranularity="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/lblResult"
            app:layout_constraintEnd_toEndOf="@+id/lblResult"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/lblResult"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#999999"
        android:backgroundTint="#999999">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/backscape"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnDiv"
            app:layout_constraintEnd_toEndOf="@+id/btnDiv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintStart_toStartOf="@+id/btnDiv"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_marginStart="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/mul"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSub"
            app:layout_constraintEnd_toEndOf="@+id/btnSub"
            app:layout_constraintStart_toStartOf="@+id/btnSub"
            app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_marginStart="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sub"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="@+id/btnAdd"
            app:layout_constraintStart_toStartOf="@+id/btnAdd"
            app:layout_constraintTop_toBottomOf="@+id/btnMul" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/dot"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnZero"
            app:layout_constraintEnd_toStartOf="@+id/btnResult"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnZero"
            app:layout_constraintTop_toTopOf="@+id/btnZero" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/result"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDot"
            app:layout_constraintEnd_toStartOf="@+id/btnAdd"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toTopOf="@+id/btnDot" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSub" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/one"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnZero"
            app:layout_constraintEnd_toEndOf="@+id/btnZero"
            app:layout_constraintEnd_toStartOf="@+id/btnTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/two"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnDot"
            app:layout_constraintEnd_toEndOf="@+id/btnDot"
            app:layout_constraintEnd_toStartOf="@+id/btnThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintStart_toStartOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnFive" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/three"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnResult"
            app:layout_constraintEnd_toEndOf="@+id/btnResult"
            app:layout_constraintEnd_toStartOf="@+id/btnMul"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintStart_toStartOf="@+id/btnResult"
            app:layout_constraintTop_toBottomOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/four"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnOne"
            app:layout_constraintEnd_toEndOf="@+id/btnOne"
            app:layout_constraintEnd_toStartOf="@+id/btnFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/five"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnTwo"
            app:layout_constraintEnd_toEndOf="@+id/btnTwo"
            app:layout_constraintEnd_toStartOf="@+id/btnSix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintStart_toStartOf="@+id/btnTwo"
            app:layout_constraintTop_toBottomOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/six"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnThree"
            app:layout_constraintEnd_toEndOf="@+id/btnThree"
            app:layout_constraintEnd_toStartOf="@+id/btnDiv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintStart_toStartOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/seven"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFour"
            app:layout_constraintEnd_toEndOf="@+id/btnFour"
            app:layout_constraintEnd_toStartOf="@+id/btnEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/eight"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFive"
            app:layout_constraintEnd_toEndOf="@+id/btnFive"
            app:layout_constraintEnd_toStartOf="@+id/btnNine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintStart_toStartOf="@+id/btnFive"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/nine"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSix"
            app:layout_constraintEnd_toEndOf="@+id/btnSix"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintStart_toStartOf="@+id/btnSix"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ccc"
            android:backgroundTint="#ccc"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/div"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnMul"
            app:layout_constraintEnd_toEndOf="@+id/btnMul"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintStart_toStartOf="@+id/btnMul"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>